--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,14 +11,14 @@ services:
       - TELEGRAM_MODE=${TELEGRAM_MODE:-polling}
       - WEBHOOK_URL=${WEBHOOK_URL}
       - WEBHOOK_SECRET=${WEBHOOK_SECRET}
-      - S3_ENDPOINT=${S3_ENDPOINT}
+      - S3_ENDPOINT=http://minio:9000
       - S3_ACCESS_KEY_ID=${S3_ACCESS_KEY_ID}
       - S3_SECRET_ACCESS_KEY=${S3_SECRET_ACCESS_KEY}
       - S3_BUCKET=${S3_BUCKET}
       - S3_REGION=${S3_REGION}
       - S3_FORCE_PATH_STYLE=${S3_FORCE_PATH_STYLE:-true}
       - MINIO_TLS_SKIP_VERIFY=${MINIO_TLS_SKIP_VERIFY:-false}
-      - ALBUM_AGGREGATION_WINDOW_SECONDS=${ALBUM_AGGREGATION_WINDOW_SECONDS:-10}
+      - ALBUM_AGGREGATION_WINDOW_SECONDS=${ALBUM_AGGREGATION_WINDOW_SECONDS:-2}
       - MAX_FILE_GB=${MAX_FILE_GB:-4}
       - SQLITE_PATH=/data/teltubby.db
       - DEDUP_ENABLE=${DEDUP_ENABLE:-true}
@@ -39,8 +39,14 @@ services:
       - "${HOST_HEALTH_PORT:-8082}:8081"
       # Enable below only in webhook mode behind a reverse proxy like NPM
       # - "8080:8080"
+    networks:
+      - minio_default
 
 volumes:
   teltubby_db:
     name: teltubby_db
+
+networks:
+  minio_default:
+    external: true
 
