feat: implement MTProto integration for large file support and enhance bot functionality
- Add MTProto client and worker for handling files >50MB
- Implement RabbitMQ job queue system for background processing
- Add comprehensive documentation for MTProto integration
- Enhance bot service with improved error handling and telemetry
- Update configuration and requirements for new dependencies
- Add implementation status tracking and project documentation

--- a/.env
+++ b/.env
@@ -15,3 +15,6 @@ IO_TIMEOUT_SECONDS=60
 LOG_LEVEL=INFO
 HEALTH_PORT=8081
 BIND_HEALTH_LOCALHOST_ONLY=false
+MTPROTO_API_ID=20649466
+MTPROTO_API_HASH=a2d7fd5463c9656fbec91402c77de42f 
+MTPROTO_PHONE_NUMBER=12512695468
