--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,7 @@ aio-pika==9.4.3
 # MTProto client library
 Telethon==1.35.0
 
+# FastAPI for enhanced health monitoring
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+
