--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,73 +1,91 @@
 version: "3.9"
 services:
-  teltubby:
-    build: .
-    image: teltubby:dev
-    container_name: teltubby
+  minio:
+    image: minio/minio:latest
+    container_name: minio
     restart: unless-stopped
     environment:
-      - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
-      - TELEGRAM_WHITELIST_IDS=${TELEGRAM_WHITELIST_IDS}
-      - TELEGRAM_MODE=${TELEGRAM_MODE:-polling}
-      - WEBHOOK_URL=${WEBHOOK_URL}
-      - WEBHOOK_SECRET=${WEBHOOK_SECRET}
-      - S3_ENDPOINT=http://minio:9000
-      - S3_ACCESS_KEY_ID=${S3_ACCESS_KEY_ID}
-      - S3_SECRET_ACCESS_KEY=${S3_SECRET_ACCESS_KEY}
-      - S3_BUCKET=${S3_BUCKET}
-      - S3_REGION=${S3_REGION}
-      - S3_FORCE_PATH_STYLE=${S3_FORCE_PATH_STYLE:-true}
-      - MINIO_TLS_SKIP_VERIFY=${MINIO_TLS_SKIP_VERIFY:-false}
-      - ALBUM_AGGREGATION_WINDOW_SECONDS=${ALBUM_AGGREGATION_WINDOW_SECONDS:-2}
-      - MAX_FILE_GB=${MAX_FILE_GB:-4}
-      - SQLITE_PATH=/data/teltubby.db
-      - DEDUP_ENABLE=${DEDUP_ENABLE:-true}
-      - CONCURRENCY=${CONCURRENCY:-8}
-      - IO_TIMEOUT_SECONDS=${IO_TIMEOUT_SECONDS:-60}
-      - S3_MULTIPART_THRESHOLD_MB=${S3_MULTIPART_THRESHOLD_MB:-8}
-      - S3_MULTIPART_PART_SIZE_MB=${S3_MULTIPART_PART_SIZE_MB:-16}
-      - QUOTA_ALERT_THRESHOLD_PCT=${QUOTA_ALERT_THRESHOLD_PCT:-80}
-      - QUOTA_ALERT_COOLDOWN_HOURS=${QUOTA_ALERT_COOLDOWN_HOURS:-24}
-      - LOG_LEVEL=${LOG_LEVEL:-INFO}
-      - LOG_ROTATE_MAX_BYTES=${LOG_ROTATE_MAX_BYTES:-5242880}
-      - LOG_ROTATE_BACKUP_COUNT=${LOG_ROTATE_BACKUP_COUNT:-10}
-      - HEALTH_PORT=${HEALTH_PORT:-8081}
-      - BIND_HEALTH_LOCALHOST_ONLY=${BIND_HEALTH_LOCALHOST_ONLY:-true}
-      # RabbitMQ (for MTProto job queue)
-      - RABBITMQ_HOST=${RABBITMQ_HOST:-rabbitmq}
-      - RABBITMQ_PORT=${RABBITMQ_PORT:-5672}
-      - RABBITMQ_USERNAME=${RABBITMQ_USERNAME:-guest}
-      - RABBITMQ_PASSWORD=${RABBITMQ_PASSWORD:-guest}
-      - RABBITMQ_VHOST=${RABBITMQ_VHOST:-/}
-      - JOB_QUEUE_NAME=${JOB_QUEUE_NAME:-teltubby.large_files}
-      - JOB_DEAD_LETTER_QUEUE=${JOB_DEAD_LETTER_QUEUE:-teltubby.failed_jobs}
-      - JOB_EXCHANGE=${JOB_EXCHANGE:-teltubby.exchange}
-      - JOB_DLX_EXCHANGE=${JOB_DLX_EXCHANGE:-teltubby.dlx}
-    volumes:
-      - teltubby_db:/data
+      MINIO_ROOT_USER: admin
+      MINIO_ROOT_PASSWORD: minio123
+    command: server /data --console-address ":9001"
     ports:
-      - "${HOST_HEALTH_PORT:-8082}:8081"
-      # Enable below only in webhook mode behind a reverse proxy like NPM
-      # - "8080:8080"
+      - "9000:9000"
+      - "9001:9001"
+    volumes:
+      - minio_data:/data
     networks:
-      - minio_default
-    depends_on:
-      - rabbitmq
+      - teltubby_network
 
   rabbitmq:
     image: rabbitmq:3.13-management
     container_name: rabbitmq
     restart: unless-stopped
     environment:
-      RABBITMQ_DEFAULT_USER: ${RABBITMQ_USERNAME:-guest}
-      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASSWORD:-guest}
+      RABBITMQ_DEFAULT_USER: guest
+      RABBITMQ_DEFAULT_PASS: guest
     ports:
-      - "${HOST_RABBITMQ_PORT:-5672}:5672"
-      - "${HOST_RABBITMQ_MGMT_PORT:-15672}:15672"
+      - "5672:5672"
+      - "15672:15672"
     volumes:
       - rabbitmq_data:/var/lib/rabbitmq
     networks:
-      - minio_default
+      - teltubby_network
+
+  teltubby:
+    build: .
+    image: teltubby:dev
+    container_name: teltubby
+    restart: unless-stopped
+    environment:
+      - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN:-test_token}
+      - TELEGRAM_WHITELIST_IDS=${TELEGRAM_WHITELIST_IDS:-123456789}
+      - TELEGRAM_MODE=${TELEGRAM_MODE:-polling}
+      - WEBHOOK_URL=${WEBHOOK_URL}
+      - WEBHOOK_SECRET=${WEBHOOK_SECRET}
+      - S3_ENDPOINT=http://minio:9000
+      - S3_ACCESS_KEY_ID=admin
+      - S3_SECRET_ACCESS_KEY=minio123
+      - S3_BUCKET=telegram
+      - S3_REGION=us-east-1
+      - S3_FORCE_PATH_STYLE=true
+      - MINIO_TLS_SKIP_VERIFY=false
+      - ALBUM_AGGREGATION_WINDOW_SECONDS=10
+      - MAX_FILE_GB=4
+      - BOT_API_MAX_FILE_SIZE_BYTES=52428800
+      - SQLITE_PATH=/data/teltubby.db
+      - DEDUP_ENABLE=true
+      - CONCURRENCY=8
+      - IO_TIMEOUT_SECONDS=60
+      - S3_MULTIPART_THRESHOLD_MB=8
+      - S3_MULTIPART_PART_SIZE_MB=16
+      - QUOTA_ALERT_THRESHOLD_PCT=80
+      - QUOTA_ALERT_COOLDOWN_HOURS=24
+      - LOG_LEVEL=INFO
+      - LOG_ROTATE_MAX_BYTES=5242880
+      - LOG_ROTATE_BACKUP_COUNT=10
+      - HEALTH_PORT=8081
+      - BIND_HEALTH_LOCALHOST_ONLY=false
+      - RABBITMQ_HOST=rabbitmq
+      - RABBITMQ_PORT=5672
+      - RABBITMQ_USERNAME=guest
+      - RABBITMQ_PASSWORD=guest
+      - RABBITMQ_VHOST=/
+      - JOB_QUEUE_NAME=teltubby.large_files
+      - JOB_DEAD_LETTER_QUEUE=teltubby.failed_jobs
+      - JOB_EXCHANGE=teltubby.exchange
+      - JOB_DLX_EXCHANGE=teltubby.dlx
+      - S3_BUCKET_QUOTA_BYTES=${S3_BUCKET_QUOTA_BYTES}
+      - QUOTA_ALERT_THRESHOLD_PCT=${QUOTA_ALERT_THRESHOLD_PCT:-80}
+      - QUOTA_ALERT_COOLDOWN_HOURS=${QUOTA_ALERT_COOLDOWN_HOURS:-24}
+    volumes:
+      - teltubby_db:/data
+    ports:
+      - "8082:8081"
+    networks:
+      - teltubby_network
+    depends_on:
+      - rabbitmq
+      - minio
 
   mtworker:
     build: .
@@ -76,47 +94,50 @@ services:
     restart: unless-stopped
     environment:
       - TELEGRAM_MODE=polling
-      - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
+      - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN:-test_token}
       - S3_ENDPOINT=http://minio:9000
-      - S3_ACCESS_KEY_ID=${S3_ACCESS_KEY_ID}
-      - S3_SECRET_ACCESS_KEY=${S3_SECRET_ACCESS_KEY}
-      - S3_BUCKET=${S3_BUCKET}
-      - S3_REGION=${S3_REGION}
-      - S3_FORCE_PATH_STYLE=${S3_FORCE_PATH_STYLE:-true}
-      - MINIO_TLS_SKIP_VERIFY=${MINIO_TLS_SKIP_VERIFY:-false}
+      - S3_ACCESS_KEY_ID=admin
+      - S3_SECRET_ACCESS_KEY=minio123
+      - S3_BUCKET=telegram
+      - S3_REGION=us-east-1
+      - S3_FORCE_PATH_STYLE=true
+      - MINIO_TLS_SKIP_VERIFY=false
       - SQLITE_PATH=/data/teltubby.db
-      - LOG_LEVEL=${LOG_LEVEL:-INFO}
-      - RABBITMQ_HOST=${RABBITMQ_HOST:-rabbitmq}
-      - RABBITMQ_PORT=${RABBITMQ_PORT:-5672}
-      - RABBITMQ_USERNAME=${RABBITMQ_USERNAME:-guest}
-      - RABBITMQ_PASSWORD=${RABBITMQ_PASSWORD:-guest}
-      - RABBITMQ_VHOST=${RABBITMQ_VHOST:-/}
-      - JOB_QUEUE_NAME=${JOB_QUEUE_NAME:-teltubby.large_files}
-      - JOB_DEAD_LETTER_QUEUE=${JOB_DEAD_LETTER_QUEUE:-teltubby.failed_jobs}
-      - JOB_EXCHANGE=${JOB_EXCHANGE:-teltubby.exchange}
-      - JOB_DLX_EXCHANGE=${JOB_DLX_EXCHANGE:-teltubby.dlx}
+      - LOG_LEVEL=INFO
+      - RABBITMQ_HOST=rabbitmq
+      - RABBITMQ_PORT=5672
+      - RABBITMQ_USERNAME=guest
+      - RABBITMQ_PASSWORD=guest
+      - RABBITMQ_VHOST=/
+      - JOB_QUEUE_NAME=teltubby.large_files
+      - JOB_DEAD_LETTER_QUEUE=teltubby.failed_jobs
+      - JOB_EXCHANGE=teltubby.exchange
+      - JOB_DLX_EXCHANGE=teltubby.dlx
       - MTPROTO_API_ID=${MTPROTO_API_ID}
       - MTPROTO_API_HASH=${MTPROTO_API_HASH}
       - MTPROTO_PHONE_NUMBER=${MTPROTO_PHONE_NUMBER}
-      - MTPROTO_SESSION_PATH=${MTPROTO_SESSION_PATH:-/data/mtproto.session}
-      - WORKER_CONCURRENCY=${WORKER_CONCURRENCY:-1}
-      - WORKER_MAX_RETRIES=${WORKER_MAX_RETRIES:-3}
-      - WORKER_RETRY_DELAY_SECONDS=${WORKER_RETRY_DELAY_SECONDS:-60}
+      - MTPROTO_SESSION_PATH=/data/mtproto.session
+      - WORKER_CONCURRENCY=1
+      - WORKER_MAX_RETRIES=3
+      - WORKER_RETRY_DELAY_SECONDS=60
     entrypoint: ["python3.12", "-m", "teltubby.mtproto.worker"]
     volumes:
       - teltubby_db:/data
     depends_on:
       - rabbitmq
+      - minio
     networks:
-      - minio_default
+      - teltubby_network
 
 volumes:
   teltubby_db:
     name: teltubby_db
   rabbitmq_data:
     name: rabbitmq_data
+  minio_data:
+    name: minio_data
 
 networks:
-  minio_default:
-    external: true
+  teltubby_network:
+    driver: bridge
 
